--- a/pages/index.mdx
+++ b/pages/index.mdx
@@ -1,30 +1,11 @@
-# LENS
-import Image from 'next/image'
-import Video from 'components/video'
-import Yvideo from 'components/yvideos'
-
-{/* Center the text */}
-<div align="center">
-    {/* Roound the edges of the image */}
-    <Image src="/images/logo.svg" alt="LENS Logo" width={200} height={200} className="rounded-full" />
-    {/* The description */}
-    LENS is a decentralized, open-source, and community-driven platform for sharing and discovering knowledge.
-
-
-## Features
-
----
-
-{/* <video width="560" height="315" controls src="/videos/lights_go.mp4" type="video/mp4"  /> */}
-
-<Video video={{src: '/videos/lights_go.mp4', title: 'Lights Go'}}/>
-
----
----
+# Introduction
  
+Welcome to Nextra! This is a basic docs template. You can use it as a starting point for your own project :)
 
-{/* <iframe width="560" height="315" src="https://www.youtube.com/embed/9bZkp7q19f0" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe> */}
-<Yvideo video={{src: '9bZkp7q19f0', title: 'g-style'}} />
----
+## What is Nextra?
 
-</div>
+A **simple**, **powerful** and **flexible** site generation framework with everything you love from Next.js.
+
+## Documentation
+
+The documentation is available at [https://nextra.site](https://nextra.site).
