very small change

--- a/pages/links.mdx
+++ b/pages/links.mdx
@@ -1,5 +1,5 @@
 import { Tab, Tabs } from 'nextra-theme-docs'
-import Video from '../components/Video'
+// import Video from '../components/Video'
 import Link from 'next/Link'
 
 # Measurment of the Lepton-Lepton Electro-weak Reaction - MOLLER 
@@ -57,7 +57,7 @@ The electroweak theory is a theory that describes the fundamental particles and 
 Assumption 1: The fundamental particles are point-like and have no internal structure.<br />
 
 <div align = "center">
-  <Video video={{src: '/videos/lights_go.mp4', title: 'This is a Video'}}/>
+  {/* <Video video={{src: '/videos/lights_go.mp4', title: 'This is a Video'}}/> */}
 </div>
 
 ### This is a Code Block
