--- a/pages/links.mdx
+++ b/pages/links.mdx
@@ -15,8 +15,8 @@ The Standard model is a theory that describes the fundamental particles and thei
 * Assumption 3: The fundamental particles interact with each other via the exchange of virtual particles.
 * Assumption 4: The fundamental particles are described by relativistic quantum field theories.
 
-### These are links
-<Link href="/docs/next/getting-started">**Getting Started**</Link>
+### This is a link
+{/* <Link href="/docs/next/getting-started">**Getting Started**</Link> */}
 
 Click [here](/docs/next/getting-started) to get started.
 
