--- a/pages/links.mdx
+++ b/pages/links.mdx
@@ -1,6 +1,6 @@
 import { Tab, Tabs } from 'nextra-theme-docs'
 // import Video from '../components/Video'
-import Link from 'next/Link'
+// import Link from 'next/Link'
 
 # Measurment of the Lepton-Lepton Electro-weak Reaction - MOLLER 
 
