--- a/pages/links.mdx
+++ b/pages/links.mdx
@@ -1,6 +1,5 @@
 import { Tab, Tabs } from 'nextra-theme-docs'
-// import Video from '../components/Video'
-// import Link from 'next/Link'
+import Video from '@/components/video'
 
 # Measurment of the Lepton-Lepton Electro-weak Reaction - MOLLER 
 
@@ -16,7 +15,6 @@ The Standard model is a theory that describes the fundamental particles and thei
 * Assumption 4: The fundamental particles are described by relativistic quantum field theories.
 
 ### This is a link
-{/* <Link href="/docs/next/getting-started">**Getting Started**</Link> */}
 
 Click [here](/docs/next/getting-started) to get started.
 
@@ -57,7 +55,7 @@ The electroweak theory is a theory that describes the fundamental particles and 
 Assumption 1: The fundamental particles are point-like and have no internal structure.<br />
 
 <div align = "center">
-  {/* <Video video={{src: '/videos/lights_go.mp4', title: 'This is a Video'}}/> */}
+  <Video video={{src: '/videos/lights_go.mp4', title: 'This is a Video'}}/>
 </div>
 
 ### This is a Code Block
