--- a/pages/MOLLER/MOLLER.mdx
+++ b/pages/MOLLER/MOLLER.mdx
@@ -1,7 +1,47 @@
 import { Tab, Tabs } from 'nextra-theme-docs'
 import Video from '@/components/video'
+import Yvideo from '@/components/yvideos'
 
-# Measurment of the Lepton-Lepton Electro-weak Reaction - MOLLER 
+
+# MOLLER - Measurment of a Lepton-Lepton Electroweak Reaction 
+
+MOLLER is an experiment that will run at the [Jefferson National Laboratory](https://www.jlab.org/). Its purpose is to measure the parity-violating 
+asymmetry of the lepton-lepton electroweak reaction. 
+
+This page will briefly overview the concepts needed to understand the experiment's basic principles. The topics highlighted in the 
+videos and text below are the following:
+{/* MAke an unorderd list */}
+
+* Lepton-lepton Electroweak reaction
+* Parity
+* Parity Violating Asymmetry
+* Cherenkov Radiation
+* Cherenkov Detectors
+* MOLLER design
+
+
+## What is the Lepton-Lepton Electroweak Reaction?
+
+The video below describes the Lepton-Lepton Electroweak reaction.
+
+<div align = "center">
+  <Yvideo video={{src: 'Nlp-PWTs1NY', title: 'MOLLER: Part 1'}} />
+</div>
+
+So you can see that the lepton-lepton electroweak reaction is a reaction between two leptons. In MOLLER it will be two electrons.
+When these electrons interact, there could be an **electromagnetic** interaction \(where they exchange a photon\) or a **weak** interaction \(where they exchange a Z^0 boson\). 
+The mixing of these interactions is why it is called the electroweak reaction. 
+
+Its actually not quite that simple but if your interested in learning more about the electroweak theory, 
+you can start by reading here [Electroweak](https://en.wikipedia.org/wiki/Electroweak_interaction). And an excelent introductory book 
+is [Introduction to elementary particle physics](https://www.amazon.com/Introduction-Elementary-Particles-David-Griffiths/dp/3527406018) By David Griffiths.
+
+Ok, so know we know what is meant by "Lepton-lepton" and "Electroweak".
+But MOLLER will be a measurment of the **Parity Violating Asymmetry** in the lepton-lepton electroweak reaction.So, what is parity? and what 
+is parity violation?
+
+The video below describes these concepts.
+
 
 ## First part: Theoretical background
 
@@ -53,10 +93,6 @@ Click [here](/docs/next/getting-started) to get started.
 ### 1.1.2. The Electroweak Theory
 The electroweak theory is a theory that describes the fundamental particles and their interactions. It is a theory of the strong, weak and electromagnetic interactions. The electroweak theory is based on the following assumptions:
 Assumption 1: The fundamental particles are point-like and have no internal structure.<br />
-
-<div align = "center">
-  <Video video={{src: '/videos/lights_go.mp4', title: 'This is a Video'}}/>
-</div>
 
 ### This is a Code Block
 ```js filename="What haha" {3} copy
