--- a/pages/index.mdx
+++ b/pages/index.mdx
@@ -8,7 +8,7 @@ import Yvideo from '@/components/yvideos'
     {/* Round the edges of the image */}
     <Image src="images/logo.svg" alt="LENS Logo" width={200} height={200} className="rounded-full" />
     {/* The description */}
-    LENS is a decentralized, open-source, and community-driven platform for sharing and discovering knowledge.
+    LENS Labratory for experimental nuclear science.
 
 
 ## Features
