--- a/pages/Tutorials/Software/Basics.mdx
+++ b/pages/Tutorials/Software/Basics.mdx
@@ -1,7 +1,7 @@
 import { Tab, Tabs } from 'nextra-theme-docs'
 import Video from '@/components/video'
 
-# Measurment of the Lepton-Lepton Electro-weak Reaction - MOLLER 
+# MOLLER - Measurment of a Lepton-Lepton Electroweak Reaction 
 
 ## First part: Theoretical background
 
