Added videos and images

--- a/pages/MOLLER/Labsandequip.mdx
+++ b/pages/MOLLER/Labsandequip.mdx
@@ -1,85 +1,38 @@
-import { Tab, Tabs } from 'nextra-theme-docs'
-import Video from '@/components/video'
+# ISU Laboratory Spaces and Equipment
+In this section, we will introduce you to the laboratory spaces and equipment used by Dr. MCNulty's group at Idaho State University (ISU). Each lab space contains specific equipment and tools that the group uses to conduct experiments, analyze data, and develop new technologies.
 
-# MOLLER - Measurment of a Lepton-Lepton Electroweak Reaction 
+## Main Lab Space
+The main lab space is where the majority of the group's experimental work takes place. Some of the key equipment found in this space includes:
 
-## First part: Theoretical background
+### Cosmic Ray Stand
+The cosmic ray stand consists of three gas electron multiplier (GEM) detectors that track incoming cosmic rays. These detectors are used in conjunction with scintillating paddles, which serve as a trigger for the data acquisition system (DAQ).
 
-### 1.1.1. The Standard Model
-The Standard model is a theory that describes the fundamental particles and their interactions. It is a theory of the strong, weak and electromagnetic interactions. The Standard Model is based on the following assumptions:
+### DAQs (Data Acquisition Systems)
+There are three DAQs in the main lab space, namely DAQ 3, 4, and 5. These systems are connected to either a NIM bin system or a VME crate and are responsible for collecting and processing data from the detectors. The DAQs run the CODA software developed by Jefferson Lab.
 
-{/* Make a bulleted list */}
-* Assumption 1: The fundamental particles are point-like and have no internal structure.
-* Assumption 2: The fundamental particles are described by quantum field theories.
-* Assumption 3: The fundamental particles interact with each other via the exchange of virtual particles.
-* Assumption 4: The fundamental particles are described by relativistic quantum field theories.
+### VME Crate and NIM Bins
+VME crates and NIM bins are modular electronics systems used to house and power various electronic modules and components. VME crates use the Versa Module Eurocard (VME) bus standard, while NIM bins use the Nuclear Instrumentation Module (NIM) standard. Both systems allow for easy integration and customization of the experimental setup.
 
-### This is a link
+### PMT Shutter Wheel System
+The PMT shutter wheel system is an in-house designed apparatus that measures the non-linearity of photomultiplier tube (PMT) gain. This system helps the group to better understand and characterize the performance of PMTs used in various experiments.
 
-Click [here](/docs/next/getting-started) to get started.
+## Second Lab Space
+The second lab space contains specialized equipment and tools for computer-aided design (CAD) and optical measurements.
 
----
+### CAD Computer
+This lab space houses the computer used for most CAD design work. The group utilizes CAD software to design and model experimental components, detector systems, and other custom parts needed for their research.
 
-{/* Make a table of the fundamental particles*/}
-### This is a table
-<div align = "center">
-| Particle | Charge | Mass | Spin | Generation |
-| -------- | ------ | ---- | ---- | ---------- |
-| Electron | -1 | 0.511 MeV | 1/2 | 1 |
-| Muon | -1 | 105.7 MeV | 1/2 | 2 |
-| Tau | -1 | 1.777 GeV | 1/2 | 3 |
-| Neutrino | 0 | 0 | 1/2 | 1 |
-| Muon Neutrino | 0 | 0 | 1/2 | 2 |
-| Tau Neutrino | 0 | 0 | 1/2 | 3 |
-| Photon | 0 | 0 | 1 | 1 |
-| W Boson | 0 | 80.4 GeV | 1 | 1 |
-| Z Boson | 0 | 91.2 GeV | 1 | 1 |
-| Gluon | 0 | 0 | 1 | 1 |
-| Quark | 2/3, -1/3, -1/3, -1/3 | 0.1-1 GeV | 1/2 | 1, 2, 3, 4 |
-| Higgs Boson | 0 | 125 GeV | 0 | 1 |
-</div>
+### Optical Table
+The optical table is a large, stable platform designed to minimize vibrations and provide a precise working surface for optical experiments and measurements.
 
-{/* Make a table of the fundamental interactions */}
-<div align = "center">
-| Interaction | Strength | Range | Description |
-| ----------- | -------- | ----- | ----------- |
-| Strong | 10^38 GeV | 10^-15 m | Holds the quarks together |
-| Weak | 10^16 GeV | 10^-15 m | Responsible for beta decay |
-| Electromagnetic | 10^9 GeV | 10^-15 m | Responsible for the interaction of charged particles |
-</div>
+### Light Transmission Apparatus
+The light transmission apparatus is used to measure the light transmission losses of irradiated quartz samples. This helps the group to characterize the properties of these materials and assess their suitability for use in experiments and detector systems.
 
+## Third Lab Space
+The third lab space is dedicated to 3D printing and rapid prototyping.
 
+### 3D Printers
+The lab contains two 3D printers, the Ultimaker S5 and the Ultimaker S2+. These printers are used by the group to create custom components, prototypes, and experimental setups. The Ultimaker S5 is a larger, more advanced printer with a range of material capabilities, while the Ultimaker S2+ is a smaller, more compact printer suitable for quick and smaller-scale projects.
+With the help of these 3D printers, the group can quickly iterate on designs, test new ideas, and produce custom parts needed for their research. This capability greatly enhances the flexibility and efficiency of their experimental work.
 
-### 1.1.2. The Electroweak Theory
-The electroweak theory is a theory that describes the fundamental particles and their interactions. It is a theory of the strong, weak and electromagnetic interactions. The electroweak theory is based on the following assumptions:
-Assumption 1: The fundamental particles are point-like and have no internal structure.<br />
-
-<div align = "center">
-  <Video video={{src: '/videos/lights_go.mp4', title: 'This is a Video'}}/>
-</div>
-
-### This is a Code Block
-```js filename="What haha" {3} copy
-const hey = "hey";
-```
- ### These are Tabs
-<Tabs items={['pnpm', 'npm', 'yarn']}>
-  <Tab>
-    **pNPM**: Fast, disk space efficient package manager.
-  </Tab>
-  <Tab>
-    **npm** is a package manager for the JavaScript programming language.
-  </Tab>
-  <Tab>
-    **Yarn** is a software packaging system.
-  </Tab>
-</Tabs>
-
-{/* Add a block of text with a blue background color */}
-<div style={{backgroundColor: 'blue', color: 'white', padding: '1rem'}}>
-  This is a block of text with a blue background color
-</div>
-{/* Add a block of blue text */}
-<div style={{color: 'blue'}}>
-  This is a block of blue text
-</div>
+In summary, the various laboratory spaces and equipment at ISU enable the group to conduct a wide range of experimental work, from detector development and data acquisition to optical measurements and rapid prototyping. By utilizing these resources, the group can further their research goals and contribute to the advancement of
