--- a/pages/Tutorials/CAD/Basics.mdx
+++ b/pages/Tutorials/CAD/Basics.mdx
@@ -1,85 +1,81 @@
-import { Tab, Tabs } from 'nextra-theme-docs'
-import Video from '@/components/video'
+# CAD Software: Inventor, Solidworks, and Fusion 360
+In this tutorial, we will introduce you to CAD (Computer-Aided Design) software, specifically Inventor, Solidworks, and Fusion 360. 
+These programs are used to create 3D models of parts and assemblies for various applications, including designing experimental setups and custom components. 
+No prior experience with CAD software is assumed, and this tutorial is designed to be accessible for new incoming students.
 
-# MOLLER - Measurment of a Lepton-Lepton Electroweak Reaction 
+The group has previously used Solidworks to design parts for Showermax and various other components. There was a change made by the MOLLER
+colaboration to use Autodesk Inventor instead of Solidworks. This tutorial will provide instructions on how to download and install Inventor, Solidworks, and Fusion 360 (for Mac users). 
 
-## First part: Theoretical background
-
-### 1.1.1. The Standard Model
-The Standard model is a theory that describes the fundamental particles and their interactions. It is a theory of the strong, weak and electromagnetic interactions. The Standard Model is based on the following assumptions:
-
-{/* Make a bulleted list */}
-* Assumption 1: The fundamental particles are point-like and have no internal structure.
-* Assumption 2: The fundamental particles are described by quantum field theories.
-* Assumption 3: The fundamental particles interact with each other via the exchange of virtual particles.
-* Assumption 4: The fundamental particles are described by relativistic quantum field theories.
-
-### This is a link
-
-Click [here](/docs/next/getting-started) to get started.
-
----
-
-{/* Make a table of the fundamental particles*/}
-### This is a table
-<div align = "center">
-| Particle | Charge | Mass | Spin | Generation |
-| -------- | ------ | ---- | ---- | ---------- |
-| Electron | -1 | 0.511 MeV | 1/2 | 1 |
-| Muon | -1 | 105.7 MeV | 1/2 | 2 |
-| Tau | -1 | 1.777 GeV | 1/2 | 3 |
-| Neutrino | 0 | 0 | 1/2 | 1 |
-| Muon Neutrino | 0 | 0 | 1/2 | 2 |
-| Tau Neutrino | 0 | 0 | 1/2 | 3 |
-| Photon | 0 | 0 | 1 | 1 |
-| W Boson | 0 | 80.4 GeV | 1 | 1 |
-| Z Boson | 0 | 91.2 GeV | 1 | 1 |
-| Gluon | 0 | 0 | 1 | 1 |
-| Quark | 2/3, -1/3, -1/3, -1/3 | 0.1-1 GeV | 1/2 | 1, 2, 3, 4 |
-| Higgs Boson | 0 | 125 GeV | 0 | 1 |
-</div>
-
-{/* Make a table of the fundamental interactions */}
-<div align = "center">
-| Interaction | Strength | Range | Description |
-| ----------- | -------- | ----- | ----------- |
-| Strong | 10^38 GeV | 10^-15 m | Holds the quarks together |
-| Weak | 10^16 GeV | 10^-15 m | Responsible for beta decay |
-| Electromagnetic | 10^9 GeV | 10^-15 m | Responsible for the interaction of charged particles |
-</div>
+## What is CAD Software?
+CAD stands for Computer-Aided Design.
+It is used to create precise 3D models of objects and assemblies.
+Commonly used in engineering, product design, and research projects.
 
 
+## Downloading and Installing Inventor, Solidworks, and Fusion 360
+In this section, we will provide step-by-step instructions on how to download and install Inventor, Solidworks, and Fusion 360.
 
-### 1.1.2. The Electroweak Theory
-The electroweak theory is a theory that describes the fundamental particles and their interactions. It is a theory of the strong, weak and electromagnetic interactions. The electroweak theory is based on the following assumptions:
-Assumption 1: The fundamental particles are point-like and have no internal structure.<br />
+### Autodesk Inventor Instalation
+This is for a free student account, which will require you to verify your student eligabilty. If you are not a student, you can still download the software, but you will have to pay for it.
+1. Visit the Autodesk [website](https://www.autodesk.com/support/account/education/students-educators/get-started) page for students getting started.
+2. Follow the on-screen instructions to create a student account.
+3. Make sure to select Inventor as your software.
 
-<div align = "center">
-  <Video video={{src: '/videos/lights_go.mp4', title: 'This is a Video'}}/>
-</div>
 
-### This is a Code Block
-```js filename="What haha" {3} copy
-const hey = "hey";
-```
- ### These are Tabs
-<Tabs items={['pnpm', 'npm', 'yarn']}>
-  <Tab>
-    **pNPM**: Fast, disk space efficient package manager.
-  </Tab>
-  <Tab>
-    **npm** is a package manager for the JavaScript programming language.
-  </Tab>
-  <Tab>
-    **Yarn** is a software packaging system.
-  </Tab>
-</Tabs>
+Note: Autodesk Inventor is only available for Windows. If you have a Mac, please follow the Fusion 360 instructions below.
 
-{/* Add a block of text with a blue background color */}
-<div style={{backgroundColor: 'blue', color: 'white', padding: '1rem'}}>
-  This is a block of text with a blue background color
-</div>
-{/* Add a block of blue text */}
-<div style={{color: 'blue'}}>
-  This is a block of blue text
-</div>
+### Solidworks Instalation
+Solidworks charges for a student account, however free accounts are offered through the IT department. If you are not a student, you can still download the software, but you will have to pay for it.
+1. Visit the Solidworks [website](https://www.solidworks.com/product/students) for students.
+2. Select the plan you want.
+3. Follow the on-screen instructions to download and install the software.
+
+Or 
+1. Use available computers on camopus with Solidworks installed.
+
+Or 
+
+1. Contact the [COSE](https://help.cose.isu.edu/) IT department to see if you can get a Solidworks installation on your personal computer.
+2. Click on the link for Software Installation Request Form.
+
+Note: Solidworks is only available for Windows. If you have a Mac, please follow the Fusion 360 instructions below.
+
+### Fusion 360 Instalation (for Mac users)
+1. Visit the Autodesk [website](https://www.autodesk.com/support/account/education/students-educators/get-started) page for students getting started.
+2. Follow the on-screen instructions to create a student account.
+3. Make sure to select Fusion 360 as your software.
+
+
+Note: Fusion 360 is available for both Windows and Mac.
+
+## Getting Started with CAD Software
+Now that you have installed the CAD software, it's time to start exploring its features. In the following tutorials, we will provide step-by-step instructions for creating simple models in Inventor, Solidworks, and Fusion 360.
+
+In this section we will provide step-by-step instructions for creating simple models in Inventor, Solidworks, and Fusion 360.
+
+### Tutorial: Inventor
+1. Open Autodesk Inventor.
+2. Click on "New" and select "Standard.ipt" to start a new part.
+3. Use the tools in the "Sketch" tab to create a simple shape (e.g., a rectangle).
+4. Click "Finish Sketch" when done.
+5. Use the "Extrude" tool to turn your 2D sketch into a 3D model.
+6. Click "OK" when done.
+7. Use the "File" tab and select "Save As" to save your model.
+
+### Tutorial: Solidworks
+1. Open Solidworks.
+2. Click on "New" and select "Part" to start a new part.
+3. Use the tools in the "Sketch" tab to create a simple shape (e.g., a rectangle).
+4. Click "Exit Sketch" when done.
+5. Use the "Features" tab and select "Extruded Boss/Base.
+6. Click "OK" when done.
+7. Use the "File" tab and select "Save As" to save your model.
+
+### Tutorial: Fusion 360
+1. Open Fusion 360.
+2. Click on "New" and select "Blank Design" to start a new part.
+3. Use the tools in the "Sketch" tab to create a simple shape (e.g., a rectangle).
+4. Click "Finish Sketch" when done.
+5. Use the "Extrude" tool to turn your 2D sketch into a 3D model.
+6. Click "OK" when done.
+7. Use the "File" tab and select "Save As" to save your model.
